--- a/SkiServiceAPI/appsettings.json
+++ b/SkiServiceAPI/appsettings.json
@@ -7,6 +7,22 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RegistrationMSDB": "Server=.\\;Database=Registration;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RegistrationDB": "Server=.\\;Database=SkiServicePA;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Warning" // Information ist sehr tiefes Level, wenn wir Warning angeben loggen wir nur noch Warning
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
