--- a/SkiServiceAPI/appsettings.json
+++ b/SkiServiceAPI/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "Issuer": "JWTAuthenticationServer",
+    "Audience": "JWTServicePostmanClient"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RegistrationDB": "Server=.\\;Database=SkiServicePA;Trusted_Connection=True;MultipleActiveResultSets=true"
@@ -12,13 +17,13 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Warning" // Information ist sehr tiefes Level, wenn wir Warning angeben loggen wir nur noch Warning
+      "Default": "Warning"
     },
     "WriteTo": [
       {
         "Name": "File",
         "Args": {
-          "path": "../webapi-.log",
+          "path": "../logs/webapi-.log",
           "rollingInterval": "Day",
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
         }
