--- a/SkiServiceAPI/appsettings.json
+++ b/SkiServiceAPI/appsettings.json
@@ -12,7 +12,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RegistrationDB": "Server=.\\;Database=SkiServicePA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RegistrationDB": "Data Source=.\\;Initial Catalog=SkiServicePA;Persist Security Info=True;User ID=Raphael;Password=hallo"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.File" ],
